small screens layout bugfix

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -13,7 +13,9 @@ $color-text: white;
 $color-display: lightgreen;
 $color-display-background: $color-dark-background;
 
-$width: 360px;
+
+$width: 300px;
+$key-size: $width * 0.2;
 
 .body {
     font-family: Arial, Helvetica, sans-serif;
@@ -34,7 +36,7 @@ h1 {
 
 .container {
     max-width: $width;
-    width: 90%;
+    // width: 90%;
     margin: 0 auto;
     border: 1px solid $color-border;
     border-radius: $border-radius;
@@ -85,8 +87,10 @@ h1 {
     justify-content: center;
     align-content: center;
     box-sizing: border-box;
-    width: 80px;
-    height: 80px;
+    width: $key-size;
+    // width: 20%;
+    height: $key-size;
+    // height: 20%;
     // border: 1px solid $color-border;
     margin: 4px;
     border-radius: $border-radius;
